--- a/web/styles/movie_item.css
+++ b/web/styles/movie_item.css
@@ -16,7 +16,7 @@
     align-items: flex-start;
 }
 
-.buttons {
+.buy_buttons {
     display: none;
     flex-direction: row;
     justify-content: flex-start;
