--- a/web/styles/page.css
+++ b/web/styles/page.css
@@ -14,6 +14,14 @@
     align-items: flex-start;
 }
 
+.buy_buttons, #text_buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    -webkit-user-select: none;
+}
+
 #film_poster {
     height: 768px;
     width: auto;
@@ -37,9 +45,8 @@
     margin: 8px
 }
 
-#buy-btn:hover {
-    background: #d74938;
-    cursor: pointer;
+#film-short-title {
+    margin-left: 0;
 }
 
 #film-short, #film-long, #film-review {
@@ -47,8 +54,52 @@
     font-size: 20px;
 }
 
-#buy-btn {
+.red_btn, .minus, .plus, .counter, .cancel {
+    font-size: 16px;
+    height: 32px;
+    line-height: 32px;
+    text-align: center;
+    margin: 8px
+}
+
+.red_btn:hover, .minus:hover, .plus:hover, .cancel:hover {
+    cursor: pointer;
+}
+
+.minus, .plus, .counter, .cancel {
     margin-left: 0;
+    margin-right: 0;
+    padding-left: 16px;
+    padding-right: 16px;
+    background: #dcd9d3;
+}
+
+.red_btn {
     background: #ff5956;
+    color: white;
+    margin-left: 0;
+    padding-left: 24px;
+    padding-right: 24px;
+}
+
+.plus {
+    margin-right: 8px;
+}
+
+.red_btn:hover {
+    background: #d74938;
+}
+
+.cancel:hover {
+    background: #bebbb5;
+}
+
+.minus:hover {
+    background: #d0723b;
+    color: white;
+}
+
+.plus:hover {
+    background: #89c14f;
     color: white;
 }
