--- a/web/styles/cart.css
+++ b/web/styles/cart.css
@@ -1,3 +1,5 @@
+@import "main.css";
+
 #body {
     display: flex;
     flex-direction: row;
@@ -33,40 +35,6 @@
     cursor: pointer;
 }
 
-.minus, .plus, .counter{
-    font-size: 16px;
-    height: 32px;
-    line-height: 32px;
-    text-align: center;
-    margin: 8px
-}
-
-.red_btn:hover, .minus:hover, .plus:hover{
-    cursor: pointer;
-}
-
-.minus, .plus, .counter {
-    margin-left: 0;
-    margin-right: 0;
-    padding-left: 16px;
-    padding-right: 16px;
-    background: #dcd9d3;
-}
-
-.plus {
-    margin-right: 8px;
-}
-
-.minus:hover {
-    background: #d0723b;
-    color: white;
-}
-
-.plus:hover {
-    background: #89c14f;
-    color: white;
-}
-
 #film-short {
     font-size: 20px;
 }
@@ -84,12 +52,10 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    /*color: white;*/
     font-size: 21px;
     padding-left: 16px;
     height:60px;
     font-family: "Roboto";
-    /*background: #d0723b;*/
 }
 
 #sum {
@@ -105,19 +71,7 @@
     cursor: pointer;
 }
 
-#cart_buy_button {
-    background: #d0723b;
-    color: white;
-    margin: 10px;
-    padding: 5px 24px;
-}
-
 #amount {
     display: flex;
     flex-direction: row;
-}
-
-#cart_buy_button:hover {
-    cursor: pointer;
-    background: #b45a37;
 }
