--- a/web/styles/header.css
+++ b/web/styles/header.css
@@ -52,7 +52,7 @@ img {
 }
 
 .header_language:hover, .header_button:hover {
-    background: #9bd753;
+    background: #2EA13C;
     cursor: pointer;
 }
 
