--- a/web/styles/page.css
+++ b/web/styles/page.css
@@ -1,3 +1,4 @@
+@import "main.css";
 #body {
     display: flex;
     flex-direction: row;
@@ -52,54 +53,4 @@
 #film-short, #film-long, #film-review {
     white-space: pre-line;
     font-size: 20px;
-}
-
-.red_btn, .minus, .plus, .counter, .cancel {
-    font-size: 16px;
-    height: 32px;
-    line-height: 32px;
-    text-align: center;
-    margin: 8px
-}
-
-.red_btn:hover, .minus:hover, .plus:hover, .cancel:hover {
-    cursor: pointer;
-}
-
-.minus, .plus, .counter, .cancel {
-    margin-left: 0;
-    margin-right: 0;
-    padding-left: 16px;
-    padding-right: 16px;
-    background: #dcd9d3;
-}
-
-.red_btn {
-    background: #ff5956;
-    color: white;
-    margin-left: 0;
-    padding-left: 24px;
-    padding-right: 24px;
-}
-
-.plus {
-    margin-right: 8px;
-}
-
-.red_btn:hover {
-    background: #d74938;
-}
-
-.cancel:hover {
-    background: #bebbb5;
-}
-
-.minus:hover {
-    background: #d0723b;
-    color: white;
-}
-
-.plus:hover {
-    background: #89c14f;
-    color: white;
 }
