--- a/web/styles/home.css
+++ b/web/styles/home.css
@@ -1,3 +1,4 @@
+@import "main.css";
 body {
     display: flex;
     flex-direction: column;
@@ -8,7 +9,8 @@ body {
 #filter {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-around;
+    align-items: center;
 }
 
 #genre_select select {
@@ -21,6 +23,14 @@ body {
     *width: 350px;
     *background: #58B14C;
     -webkit-appearance: none;
+}
+
+#home_discount {
+    box-shadow: 1px 1px 11px #330033;
+    padding: 5px;
+    background: #d0723b;
+    color: white;
+    font-size: 16px;
 }
 
 #genre_select {
